--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,21 +29,22 @@ jobs:
       run: ./gradlew build
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        name: Release ${{ github.ref }}
         draft: true
         prerelease: false
-    - name: Release jars
-      id: upload-connector-jars 
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./streaming-connect-sink/build/libs/streaming-connect-sink-0.0.3-java-11.jar
-        asset_name: streaming-connect-sink-0.0.3-java-11.zip
-        asset_content_type: application/java-archive
+        files: ./streaming-connect-sink/build/libs/streaming-connect-sink-*.jar
+#     - name: Release jars
+#       id: upload-connector-jars 
+#       uses: actions/upload-release-asset@v1
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:
+#         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+#         asset_path: ./streaming-connect-sink/build/libs/streaming-connect-sink-0.0.3-java-11.jar
+#         asset_name: streaming-connect-sink-0.0.3-java-11.zip
+#         asset_content_type: application/java-archive
