--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,21 +12,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [ '8', '11' ]
     name: Build for ${{ matrix.Java }}
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
-        java-version: ${{ matrix.java }}
+        java-version: 11
         distribution: 'adopt'
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: |
+        export JAVA_COMPILATION_VERSION=11
+        ./gradlew build
+        export JAVA_COMPILATION_VERSION=8
+        ./gradlew build
     - name: Bump Release Version
       id: tag_version
       uses: mathieudutour/github-tag-action@v5.5
