--- a/.github/workflows/build-release-master.yml
+++ b/.github/workflows/build-release-master.yml
@@ -8,22 +8,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java-version: [ 8, 11 ]
     name: Build for ${{ matrix.Java }}
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: ${{ matrix.java }}
           distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
-        run: |
-          export JAVA_COMPILATION_VERSION=11
-          ./gradlew build
-          export JAVA_COMPILATION_VERSION=8
-          ./gradlew build
+        run: ./gradlew clean build kafkaConnectPublish
       - name: Bump Release Version
         id: tag_version
         uses: mathieudutour/github-tag-action@v5.5
@@ -40,4 +39,6 @@ jobs:
           body: ${{ steps.tag_version.outputs.changelog }}
           draft: true
           prerelease: false
-          files: ./streaming-connect-sink/build/libs/streaming-connect-sink-*.jar
+          files: |
+            ./streaming-connect-sink/build/libs/streaming-connect-sink-*.jar
+            ./build/distributions/adobe-streaming-connect-sink-*.zip
