--- a/.github/workflows/build-release-master.yml
+++ b/.github/workflows/build-release-master.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [ '8', '11' ]
+        java: [ '8', '11' ]
     name: Build for ${{ matrix.Java }}
     steps:
       - uses: actions/checkout@v2
