ISSUE-32 Release master release

--- a/.github/workflows/build-release-master.yml
+++ b/.github/workflows/build-release-master.yml
@@ -23,7 +23,7 @@ jobs:
           export JAVA_COMPILATION_VERSION=8
           ./gradlew build
           export JAVA_COMPILATION_VERSION=11
-          ./gradlew build
+          ./gradlew build kafkaConnectPublish
       - name: Bump Release Version
         id: tag_version
         uses: mathieudutour/github-tag-action@v5.5
