--- a/.github/workflows/build-release-master.yml
+++ b/.github/workflows/build-release-master.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Build with Gradle
         run: |
           export JAVA_COMPILATION_VERSION=8
-          ./gradlew build
-          export JAVA_COMPILATION_VERSION=11
-          ./gradlew build kafkaConnectPublish
+#          ./gradlew build
+#          export JAVA_COMPILATION_VERSION=11
+#          ./gradlew build kafkaConnectPublish
       - name: Bump Release Version
         id: tag_version
         uses: mathieudutour/github-tag-action@v5.5
@@ -37,7 +37,18 @@ jobs:
         with:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
           name: ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
+          body: |
+            ${{ steps.tag_version.outputs.changelog }}
+            ## Confluent Archive Zip
+            Attached to this release is the adobe-streaming-connect-sink-${{ steps.tag_version.outputs.new_version }}.zip confluent archive - see the [confluent documentation](https://docs.confluent.io/home/connect/install.html) about installing a connector manually for more information.
+
+            ## All-In-One Dependency JAR
+            All in one dependency JAR could be used in place of multiple jars.
+            Following all-in-one AEP sink connector JAR are attached in release :
+            1. streaming-connect-sink-${{ steps.tag_version.outputs.new_version }}-java-8.jar  : Compiled with java 8
+            2. streaming-connect-sink-${{ steps.tag_version.outputs.new_version }}-java-11.jar : Compiled with java 11
+
+            For connector properties and sample connector configuration please refer : [Developer Guide](https://github.com/adobe/experience-platform-streaming-connect/blob/master/DEVELOPER_GUIDE.md)
           draft: true
           prerelease: false
           files: |
