--- a/.github/workflows/build-release-master.yml
+++ b/.github/workflows/build-release-master.yml
@@ -18,17 +18,18 @@ jobs:
           distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build with Gradle
-        run: |
-          export JAVA_COMPILATION_VERSION=8
-#          ./gradlew build
-#          export JAVA_COMPILATION_VERSION=11
-#          ./gradlew build kafkaConnectPublish
       - name: Bump Release Version
         id: tag_version
         uses: mathieudutour/github-tag-action@v5.5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build with Gradle
+        run: |
+          export JAVA_COMPILATION_VERSION=8
+          ./gradlew updateVersion -PversionBump=${{ steps.tag_version.outputs.new_version }}
+          ./gradlew build
+          export JAVA_COMPILATION_VERSION=11
+          ./gradlew build kafkaConnectPublish
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
