--- a/.github/workflows/build-release-master.yml
+++ b/.github/workflows/build-release-master.yml
@@ -54,4 +54,20 @@ jobs:
           prerelease: false
           files: |
             ./streaming-connect-sink/build/libs/streaming-connect-sink-*.jar
-            ./build/distributions/adobe-streaming-connect-sink-*.zip
+            ./build/distributions/adobeinc-streaming-connect-sink-*.zip
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: adobe/experience-platform-streaming-connect:latest,adobe/experience-platform-streaming-connect:${{ steps.tag_version.outputs.new_version }}
