--- a/.github/workflows/build-release-master.yml
+++ b/.github/workflows/build-release-master.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     name: Build for 8 and 11
     steps:
       - uses: actions/checkout@v2
