--- a/.github/workflows/build-release-master.yml
+++ b/.github/workflows/build-release-master.yml
@@ -70,4 +70,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: vivetiwa/experience-platform-streaming-connect:latest
+          tags: ghcr.io/vivetiwa/experience-platform-streaming-connect:latest
